--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_svg: ^2.0.4
   flutter_switch: ^0.3.2
   google_fonts: ^4.0.3
+  provider: ^6.0.5
+  shared_preferences: ^2.0.20
 
 dev_dependencies:
   flutter_test:
